--- a/date/translations/date.pot
+++ b/date/translations/date.pot
@@ -3,21 +3,22 @@
 # LANGUAGE translation of Drupal (date)
 # Copyright YEAR NAME <EMAIL@ADDRESS>
 # Generated from files:
-#  date_admin.inc,v 1.40.2.3.2.26 2008/12/13 23:31:11 karens
-#  date.module,v 1.61.2.4.2.38 2008/12/08 11:33:13 karens
-#  date_elements.inc,v 1.46.2.2.2.40 2008/12/05 14:06:35 karens
-#  date_repeat.inc,v 1.22.2.1.2.18 2008/11/28 13:19:40 karens
-#  date_token.inc,v 1.2.2.1.2.2 2008/09/01 12:05:12 karens
+#  date_admin.inc,v 1.40.2.3.2.27 2009/01/10 22:38:51 karens
+#  date.module,v 1.61.2.4.2.40 2009/01/10 22:38:51 karens
+#  date_elements.inc,v 1.46.2.2.2.43 2009/01/10 22:56:13 karens
+#  date_repeat.inc,v 1.22.2.1.2.19 2009/01/06 22:48:31 karens
+#  date_token.inc,v 1.2.2.1.2.5 2009/01/06 22:48:31 karens
 #  date.theme,v 1.6.4.29 2008/11/18 14:04:54 karens
 #  date.install,v 1.37.2.5.2.19 2008/11/29 14:13:10 karens
 #  date.info,v 1.3 2008/02/18 19:32:28 karens
+#  date_tools.module,v 1.1.2.2 2009/01/10 22:38:52 karens
 #  date_api.views.inc,v 1.1.2.6 2008/11/30 13:58:27 karens
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2008-12-16 22:14+0100\n"
+"POT-Creation-Date: 2009-01-11 11:03+0100\n"
 "PO-Revision-Date: YYYY-mm-DD HH:MM+ZZZZ\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
@@ -63,7 +64,7 @@ msgid "Customize Default Value"
 msgstr ""
 
 #: date/date_admin.inc:83
-msgid "<p>The custom value for a Relative default should be something that describes a time by reference to the current day using strtotime, like '+90 days' (90 days from the day the field is created) or '+1 Saturday' (the next Saturday). See !strtotime for more details.</p>"
+msgid "The custom value for a Relative default should be something that describes a time by reference to the current day using strtotime, like '+90 days' (90 days from the day the field is created) or '+1 Saturday' (the next Saturday). See !strtotime for more details."
 msgstr ""
 
 #: date/date_admin.inc:83
@@ -235,11 +236,11 @@ msgid "Should the repeat options form start out expanded or collapsed? Set to 'C
 msgstr ""
 
 #: date/date_admin.inc:406
-msgid "* The custom format, if provided, will override the selected display or input options. Define a php date format string like 'm-d-Y H:i' (see !link for more details)."
+msgid "* The custom format, if provided, will override the selected display or input options. Define a php date format string like 'm-d-Y H:i' (see <a href=\"@link\">http://php.net/date<a> for more details)."
 msgstr ""
 
 #: date/date_admin.inc:427
-msgid "<p class=\"error\">Changing the %name setting after data has been created could result in the loss of data!</p>"
+msgid "Changing the %name setting after data has been created could result in the loss of data!"
 msgstr ""
 
 #: date/date_admin.inc:438 date/date.module:217
@@ -258,51 +259,51 @@ msgstr ""
 msgid "Default"
 msgstr ""
 
-#: date/date_admin.inc:462
+#: date/date_admin.inc:463
 msgid "Date display"
 msgstr ""
 
-#: date/date_admin.inc:468
+#: date/date_admin.inc:470
 msgid "*Custom display format"
 msgstr ""
 
-#: date/date_admin.inc:484
+#: date/date_admin.inc:486
 msgid "Site's time zone"
 msgstr ""
 
-#: date/date_admin.inc:485
+#: date/date_admin.inc:487
 msgid "Date's time zone"
 msgstr ""
 
-#: date/date_admin.inc:486
+#: date/date_admin.inc:488
 msgid "User's time zone"
 msgstr ""
 
-#: date/date_admin.inc:488
+#: date/date_admin.inc:490
 msgid "No time zone conversion"
 msgstr ""
 
 #: date/date_elements.inc:28
-msgid "A 'From date' date is required for %field %delta"
+msgid "A 'From date' date is required for field %field %delta."
 msgstr ""
 
 #: date/date_elements.inc:34
-msgid "A 'To date' is required for %field %delta"
+msgid "A 'To date' is required for field %field %delta."
 msgstr ""
 
-#: date/date_elements.inc:336
+#: date/date_elements.inc:342
 msgid "Empty 'To date' values will use the 'From date' values."
 msgstr ""
 
-#: date/date_elements.inc:409
+#: date/date_elements.inc:415
 msgid "Some value must be entered in the To date."
 msgstr ""
 
-#: date/date_elements.inc:427
+#: date/date_elements.inc:433
 msgid "The To date must be greater than the From date."
 msgstr ""
 
-#: date/date_repeat.inc:76
+#: date/date_repeat.inc:77
 msgid "The UNTIL value is required for repeating dates."
 msgstr ""
 
@@ -347,7 +348,7 @@ msgid "Date week (two digit)"
 msgstr ""
 
 #: date/date_token.inc:22
-msgid "Date date (day of month)"
+msgid "Date date (YYYY-MM-DD)"
 msgstr ""
 
 #: date/date_token.inc:23
@@ -426,12 +427,16 @@ msgstr ""
 msgid "Feed"
 msgstr ""
 
+#: date/date.module:241
+msgid "iCal"
+msgstr ""
+
 #: date/date.module:244
 msgid "As Time Ago"
 msgstr ""
 
 #: date/date.module:428
-msgid "<p>Complete documentation for the Date and Date API modules is available at !link.</p>"
+msgid "Complete documentation for the Date and Date API modules is available at <a href=\"@link\">http://drupal.org/node/92460</a>."
 msgstr ""
 
 #: date/date.module:0 date/date.theme:0
@@ -466,7 +471,7 @@ msgstr ""
 msgid "All nodes with date fields have been checked."
 msgstr ""
 
-#: date/date.info:0 includes/date_api.views.inc:127;128;137;138
+#: date/date.info:0 date_tools/date_tools.module:114;133;398 includes/date_api.views.inc:127;128;137;138
 msgid "Date"
 msgstr ""
 
