--- a/date_popup/translations/date_popup.pot
+++ b/date_popup/translations/date_popup.pot
@@ -3,15 +3,16 @@
 # LANGUAGE translation of Drupal (date_popup)
 # Copyright YEAR NAME <EMAIL@ADDRESS>
 # Generated from files:
-#  date_popup.module,v 1.42.2.1.2.32 2008/11/30 15:50:24 karens
-#  date_popup.install,v 1.5.6.3 2008/11/18 16:16:00 karens
+#  date_popup.module,v 1.42.2.1.2.34 2009/01/10 22:38:51 karens
+#  date_popup.install,v 1.5.6.4 2009/01/10 22:38:51 karens
 #  date_popup/date_popup.info: n/a
+#  date_tools.module,v 1.1.2.2 2009/01/10 22:38:52 karens
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2008-12-16 22:14+0100\n"
+"POT-Creation-Date: 2009-01-11 11:03+0100\n"
 "PO-Revision-Date: YYYY-mm-DD HH:MM+ZZZZ\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
@@ -57,26 +58,26 @@ msgid "Decrement"
 msgstr ""
 
 #: date_popup/date_popup.module:314
-msgid "%field is required."
+msgid "Field %field is required."
 msgstr ""
 
 #: date_popup/date_popup.module:338
-msgid "%field is invalid."
+msgid "Field %field is invalid."
 msgstr ""
 
 #: date_popup/date_popup.module:0
 msgid "date_popup"
 msgstr ""
 
-#: date_popup/date_popup.install:14
-msgid "<p>Download jquery.timeentry.pack.js and jquery.timeentry.css from the jquery-timeentry home page at !link and install them in the /lib/ folder of the Date Popup module.</p>"
+#: (duplicate) date_popup/date_popup.install:14 
+msgid "Download jquery.timeentry.pack.js and jquery.timeentry.css from the jquery-timeentry home page at <a href=\"@link\">http://home.iprimus.com.au/kbwood/jquery/timeEntry.html</a> and install them in the /lib/ folder of the Date Popup module."
 msgstr ""
 
 #: (duplicate) date_popup/date_popup.install:18 
 msgid "Date Popup requirements"
 msgstr ""
 
-#: date_popup/date_popup.info:0
+#: date_popup/date_popup.info:0 date_tools/date_tools.module:405
 msgid "Date Popup"
 msgstr ""
 
