--- a/translations/date_api.pot
+++ b/translations/date_api.pot
@@ -3,23 +3,24 @@
 # LANGUAGE translation of Drupal (root)
 # Copyright YEAR NAME <EMAIL@ADDRESS>
 # Generated from files:
-#  date_api_elements.inc,v 1.49.2.1.2.36 2008/12/05 14:06:35 karens
-#  date_api_ical.inc,v 1.35.4.21 2008/12/08 11:34:18 karens
-#  date_api.module,v 1.64.2.5.2.56 2008/11/29 16:22:12 karens
-#  date_api.install,v 1.16.2.1.2.9 2008/10/04 12:43:31 karens
+#  date_api_elements.inc,v 1.49.2.1.2.37 2009/01/10 22:38:51 karens
+#  date_api_ical.inc,v 1.35.4.22 2009/01/10 22:38:51 karens
+#  date_api.module,v 1.64.2.5.2.57 2009/01/10 22:38:51 karens
+#  date_api.install,v 1.16.2.1.2.10 2009/01/10 22:38:51 karens
 #  date_api.info,v 1.6 2008/02/18 19:32:28 karens
+#  date_tools.module,v 1.1.2.2 2009/01/10 22:38:52 karens
 #  date.info,v 1.3 2008/02/18 19:32:28 karens
-#  date_copy.info,v 1.2 2008/02/18 19:32:28 karens
 #  date_php4.info,v 1.3 2008/02/18 19:32:28 karens
 #  date_popup/date_popup.info: n/a
 #  date_repeat.info,v 1.5 2008/02/18 19:32:29 karens
 #  date_timezone.info,v 1.3.4.1 2008/06/27 14:14:01 karens
+#  date_tools.info,v 1.1.2.1 2009/01/10 20:06:10 karens
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2008-12-16 22:14+0100\n"
+"POT-Creation-Date: 2009-01-11 11:03+0100\n"
 "PO-Revision-Date: YYYY-mm-DD HH:MM+ZZZZ\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
@@ -57,7 +58,7 @@ msgid "A valid value is required."
 msgstr ""
 
 #: date_api_elements.inc:461
-msgid "%field has errors."
+msgid "Field %field has errors."
 msgstr ""
 
 #: date_api_elements.inc:507
@@ -69,15 +70,15 @@ msgid "date ical"
 msgstr ""
 
 #: date_api_ical.inc:86
-msgid "Request Error importing !filename: !error"
+msgid "HTTP Request Error importing %filename: @error"
 msgstr ""
 
 #: date_api_ical.inc:95
-msgid "Failed to open file: !filename"
+msgid "Failed to open file: %filename"
 msgstr ""
 
 #: date_api_ical.inc:101
-msgid "Invalid calendar file: !filename"
+msgid "Invalid calendar file: %filename"
 msgstr ""
 
 #: date_api_ical.inc:122
@@ -109,18 +110,14 @@ msgid "date_api"
 msgstr ""
 
 #: (duplicate) date_api.install:103 
-msgid "The Date API module requires the !link for PHP versions less than 5.2."
-msgstr ""
-
-#: (duplicate) date_api.install:103 
-msgid "Date PHP4 module"
+msgid "The Date API module requires the <a href=\"@link\">Date PHP4 module</a> for PHP versions less than 5.2."
 msgstr ""
 
 #: (duplicate) date_api.install:107 
 msgid "Date API requirements"
 msgstr ""
 
-#: date_api.info:0
+#: date_api.info:0 date_tools/date_tools.module:399
 msgid "Date API"
 msgstr ""
 
@@ -128,7 +125,7 @@ msgstr ""
 msgid "A Date API that can be used by other modules."
 msgstr ""
 
-#: date_api.info:0 date/date.info:0 date_copy/date_copy.info:0 date_php4/date_php4.info:0 date_popup/date_popup.info:0 date_repeat/date_repeat.info:0 date_timezone/date_timezone.info:0
+#: date_api.info:0 date/date.info:0 date_php4/date_php4.info:0 date_popup/date_popup.info:0 date_repeat/date_repeat.info:0 date_timezone/date_timezone.info:0 date_tools/date_tools.info:0
 msgid "Date/Time"
 msgstr ""
 
