--- a/translations/general.pot
+++ b/translations/general.pot
@@ -3,25 +3,26 @@
 # LANGUAGE translation of Drupal (general)
 # Copyright YEAR NAME <EMAIL@ADDRESS>
 # Generated from files:
-#  date_api_elements.inc,v 1.49.2.1.2.36 2008/12/05 14:06:35 karens
-#  date_popup.module,v 1.42.2.1.2.32 2008/11/30 15:50:24 karens
+#  date_api_elements.inc,v 1.49.2.1.2.37 2009/01/10 22:38:51 karens
+#  date_popup.module,v 1.42.2.1.2.34 2009/01/10 22:38:51 karens
 #  date_api_sql.inc,v 1.9.2.3.2.32 2008/12/03 20:15:33 karens
-#  date_api.module,v 1.64.2.5.2.56 2008/11/29 16:22:12 karens
+#  date_api.module,v 1.64.2.5.2.57 2009/01/10 22:38:51 karens
 #  theme.inc,v 1.1.4.29 2008/12/03 15:44:27 karens
-#  date_repeat_form.inc,v 1.15.4.10 2008/12/03 14:35:42 karens
+#  date_repeat_form.inc,v 1.15.4.12 2009/01/10 22:38:51 karens
 #  date_repeat.module,v 1.30.4.7 2008/11/21 16:27:35 karens
-#  date_admin.inc,v 1.40.2.3.2.26 2008/12/13 23:31:11 karens
-#  date_api_argument_handler.inc,v 1.1.2.28 2008/12/06 12:39:14 karens
-#  date_elements.inc,v 1.46.2.2.2.40 2008/12/05 14:06:35 karens
-#  date_api_filter_handler.inc,v 1.1.2.14 2008/12/08 12:15:57 karens
-#  date.module,v 1.61.2.4.2.38 2008/12/08 11:33:13 karens
-#  date_copy.module,v 1.16.2.1.2.10 2008/11/01 13:06:26 karens
+#  date_admin.inc,v 1.40.2.3.2.27 2009/01/10 22:38:51 karens
+#  date_tools.module,v 1.1.2.2 2009/01/10 22:38:52 karens
+#  date_api_argument_handler.inc,v 1.1.2.29 2009/01/10 22:38:52 karens
+#  date_elements.inc,v 1.46.2.2.2.43 2009/01/10 22:56:13 karens
+#  date_api_filter_handler.inc,v 1.1.2.16 2009/01/11 00:24:26 karens
+#  date.module,v 1.61.2.4.2.40 2009/01/10 22:38:51 karens
+#  date_php4.module,v 1.4.6.5 2008/10/05 17:05:20 karens
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2008-12-16 22:14+0100\n"
+"POT-Creation-Date: 2009-01-11 11:03+0100\n"
 "PO-Revision-Date: YYYY-mm-DD HH:MM+ZZZZ\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
@@ -58,7 +59,7 @@ msgstr ""
 msgid "Second"
 msgstr ""
 
-#: date_api_sql.inc:695 date/date_admin.inc:361 includes/date_api_argument_handler.inc:62
+#: date_api_sql.inc:695 date/date_admin.inc:361 date_tools/date_tools.module:153 includes/date_api_argument_handler.inc:62
 msgid "Granularity"
 msgstr ""
 
@@ -94,19 +95,19 @@ msgstr ""
 msgid "Now"
 msgstr ""
 
-#: date/date_elements.inc:329 includes/date_api_filter_handler.inc:240
+#: date/date_elements.inc:335 includes/date_api_filter_handler.inc:240
 msgid "From date"
 msgstr ""
 
-#: date/date_elements.inc:331 includes/date_api_filter_handler.inc:243
+#: date/date_elements.inc:337 includes/date_api_filter_handler.inc:243
 msgid "To date"
-msgstr ""
-
-#: date/date.module:241 date_copy/date_copy.module:44
-msgid "iCal"
 msgstr ""
 
 #: date/date.module:26 date_repeat/date_repeat.module:171
 msgid "Repeats"
+msgstr ""
+
+#: date_php4/date_php4.module:54 date_tools/date_tools.module:193
+msgid "Save"
 msgstr ""
 
