--- a/translations/date_api.de.po
+++ b/translations/date_api.de.po
@@ -18,12 +18,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2008-12-16 22:14+0100\n"
-"PO-Revision-Date: 2008-12-17 21:54+0100\n"
+"POT-Creation-Date: 2009-01-11 11:03+0100\n"
+"PO-Revision-Date: 2009-01-11 11:55+0100\n"
 "Last-Translator: Alexander Haß\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "X-Poedit-Language: German\n"
@@ -58,8 +58,8 @@ msgid "A valid value is required."
 msgstr "Ein gültiger Wert ist erforderlich."
 
 #: date_api_elements.inc:461
-msgid "%field has errors."
-msgstr "%field enthält Fehler."
+msgid "Field %field has errors."
+msgstr "Das Feld %field enthält Fehler."
 
 #: date_api_elements.inc:507
 msgid "A valid date is required for %title."
@@ -70,16 +70,16 @@ msgid "date ical"
 msgstr "iCal-Datum"
 
 #: date_api_ical.inc:86
-msgid "Request Error importing !filename: !error"
-msgstr "Fehler beim importieren von !filename: !error"
+msgid "HTTP Request Error importing %filename: @error"
+msgstr "HTTP-Anfrage-Fehler beim Importieren von %filename: @error"
 
 #: date_api_ical.inc:95
-msgid "Failed to open file: !filename"
-msgstr "Öffen der Datei fehlgeschlagen: !filename"
+msgid "Failed to open file: %filename"
+msgstr "Öffen der Datei fehlgeschlagen: %filename"
 
 #: date_api_ical.inc:101
-msgid "Invalid calendar file: !filename"
-msgstr "Ungültige Kalenderdatei: !filename"
+msgid "Invalid calendar file: %filename"
+msgstr "Ungültige Kalenderdatei: %filename"
 
 #: date_api_ical.inc:122
 msgid "Invalid calendar file."
@@ -112,18 +112,15 @@ msgid "date_api"
 msgstr "date_api"
 
 #: (duplicate) date_api.install:103
-msgid "The Date API module requires the !link for PHP versions less than 5.2."
-msgstr "Das Datum-API-Modul erfordert das !link für PHP-Versionen kleiner als 5.2."
-
-#: (duplicate) date_api.install:103
-msgid "Date PHP4 module"
-msgstr "PHP4-Datumsmodul"
+msgid "The Date API module requires the <a href=\"@link\">Date PHP4 module</a> for PHP versions less than 5.2."
+msgstr "Das Datum-API-Modul erfordert das <a href=\"@link\">PHP4-Datums-Modul</a> für PHP-Versionen kleiner als 5.2."
 
 #: (duplicate) date_api.install:107
 msgid "Date API requirements"
 msgstr "Datum-API Anforderungen"
 
 #: date_api.info:0
+#: date_tools/date_tools.module:399
 msgid "Date API"
 msgstr "Datum-API"
 
@@ -133,11 +130,11 @@ msgstr "Ein Datum-API kann von anderen Modulen verwendet werden."
 
 #: date_api.info:0
 #: date/date.info:0
-#: date_copy/date_copy.info:0
 #: date_php4/date_php4.info:0
 #: date_popup/date_popup.info:0
 #: date_repeat/date_repeat.info:0
 #: date_timezone/date_timezone.info:0
+#: date_tools/date_tools.info:0
 msgid "Date/Time"
 msgstr "Datum/Zeit"
 
