--- a/translations/includes.de.po
+++ b/translations/includes.de.po
@@ -11,12 +11,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2008-12-16 22:14+0100\n"
-"PO-Revision-Date: 2008-12-17 00:18+0100\n"
+"POT-Creation-Date: 2009-01-11 11:03+0100\n"
+"PO-Revision-Date: 2009-01-11 12:00+0100\n"
 "Last-Translator: Alexander Haß\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "X-Poedit-Language: German\n"
@@ -68,7 +68,7 @@ msgstr ""
 
 #: includes/date_api_argument_handler.inc:74
 #: includes/date_api_filter_handler.inc:111
-msgid "Set the allowable minimum and maximum year range for this argument, either a -X:+X offset from the current year, like '-3:+3' or an absolute minimum and maximum year, like '2005:2010'.  When the argument is set to a date outside the range, the page will be returned as 'Page not found (404)'."
+msgid "Set the allowable minimum and maximum year range for this argument, either a -X:+X offset from the current year, like '-3:+3' or an absolute minimum and maximum year, like '2005:2010'. When the argument is set to a date outside the range, the page will be returned as 'Page not found (404)'."
 msgstr ""
 
 #: includes/date_api_argument_handler.inc:83
@@ -134,15 +134,23 @@ msgid "You must select at least one date field for this filter."
 msgstr "Für diesen Filter muss mindestens ein Datumsfeld ausgewählt werden."
 
 #: includes/date_api_filter_handler.inc:191
-msgid "<div class=\"form-item\"><label>Absolute value</label></div>"
-msgstr "<div class=\"form-item\"><label>Absoluter Wert</label></div>"
+msgid "Absolute value"
+msgstr ""
 
 #: includes/date_api_filter_handler.inc:194
 msgid "Date default"
 msgstr "Standardmäßiges Datum"
 
 #: includes/date_api_filter_handler.inc:196
-msgid "<label>Relative value</label><p>Relative values will be used if no date is set above. Use 'now' to default to the current date at runtime or add modifiers like 'now +1 day'. The To date default value is used when the operator is set to 'between' or 'not between'. </p><p>If the filter is exposed, these values will be used to set the inital value of the exposed filter. Leave both date and default values blank to start with no value in the exposed filter. </p>"
+msgid "Relative value"
+msgstr ""
+
+#: includes/date_api_filter_handler.inc:196
+msgid "Relative values will be used if no date is set above. Use 'now' to default to the current date at runtime or add modifiers like 'now +1 day'. The To date default value is used when the operator is set to 'between' or 'not between'."
+msgstr ""
+
+#: includes/date_api_filter_handler.inc:196
+msgid "If the filter is exposed, these values will be used to set the inital value of the exposed filter. Leave both date and default values blank to start with no value in the exposed filter."
 msgstr ""
 
 #: includes/date_api_filter_handler.inc:200
@@ -168,16 +176,16 @@ msgstr "@min und @max"
 
 #: includes/date_navigation_plugin_style.inc:24
 #, fuzzy
-msgid "The @style cannot use more than one Date: Date argument."
-msgstr "Das @style kann nicht mehr als ein Datum verwenden: Datumsargument."
+msgid "The %style cannot use more than one Date: Date argument."
+msgstr "Das %style kann nicht mehr als ein Datum verwenden: Datumsargument."
 
 #: includes/date_navigation_plugin_style.inc:27
 #, fuzzy
-msgid "The @style requires the Date: Date argument be set to default to the current date."
-msgstr "Das @style erfordert das Datum: Für das Datumsargument wird das aktuelle Datum verwendet."
+msgid "The %style requires the Date: Date argument be set to default to the current date."
+msgstr "Das %style erfordert das Datum: Für das Datumsargument wird das aktuelle Datum verwendet."
 
 #: includes/date_navigation_plugin_style.inc:34
 #, fuzzy
-msgid "The @style requires the Date: Date argument."
-msgstr "Das @style erfordert das Datum: Datumsargument."
+msgid "The %style requires the Date: Date argument."
+msgstr "Das %style erfordert das Datum: Datumsargument."
 
