--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Clean out unused part of Date Popup jQuery code for easier maintenance.
 - #347080 Fix PHP4 southern timezone computation and New Zealand region.
 - #353327 Check for Event 2 timezone table before trying to use it.
 - #310633 Rework 'all day' logic to correctly handle increments.
