--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #348276 Remove class date-clear-block from timezone element.
 - #217153 Remove asterisks from custom format now that they are explained in advanced help.
 - #292942 Only load timezone js file in timezone forms.
 - #313427 Don't add the date field to the view, it may be enough to join the table in.
