--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #367970 Fix date filter bugs, better handling for partial dates and force date popup to use the right default value.
 - #313369 Repeating date with exceptions created error when exceptions data is appended.
 - #363424 Empty value should be object, not array.
 - Fix bad PHP4 regex that caused endless looping in calendar and broken logic elsewhere.
