--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #370092 Add all-day checkbox to date field and use it in calendar.
 - #347090 Fix southern hemisphere timezone adjustment for PHP4.
 - Make sure un-exposed filter checks for defaults to find values like 'now'.
 - Fix bug that caused date_select to end up as current date.
