--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Add our custom date formats as values on the core locale form so we don't get errors on submission if they are missing.
 - #348241 Don't unset view copy on node because it interferes with template suggestions. Need to watch this for possible performance problems.
 - #364770 Add new date link needs to convert underscore to hyphen.
 - Can't use date-clear attribute on timezone list.
