--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- The date filter should not be setting the view dates, the style should do that.
 - Add 'value' and 'value2' hints to views fields and use new CCK views data.
 - Give the Date browser a better path with no underscore.
 - #370961 Date format update was not PostgreSQL-safe.
