--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,7 +4,9 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
-- Fix to iCal array: leave 'all day' notice in the individual date components as well
+- Fix to iCal: alter the end date of all day events to match the to date.
+  The ical practice of setting the End date as the next day won't work for our interal use of this value.
+- Fix to iCal: leave 'all day' notice in the individual date components as well
   as the top level so it is available in each portion of the VEVENT array, needed for FeedAPI parsing.
 - Fix broken date link in calendar created by Date Tools.
 - Make the default value for the 'To date' easier to see in the field settings.
