--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- iCal TRIGGER can either be a date or a duration.
 - Fix to iCal: alter the end date of all day events to match the to date.
   The ical practice of setting the End date as the next day won't work for our interal use of this value.
 - Fix to iCal: leave 'all day' notice in the individual date components as well
