--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #347645 Mark 'To date' required if it is.
 - #345215, #309921 Rework the way multiple 'From date' and 'To date' fields are identified in validation errors.
 - #375551 The 'All day' formatting should not be applied to format_interval formats.
 - Date PHP4: fix inconsistency in offset computation for first two hours of the day dst changes.
