Rewording of a string

--- a/date_repeat/translations/date_repeat.de.po
+++ b/date_repeat/translations/date_repeat.de.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2009-03-07 19:12+0100\n"
-"PO-Revision-Date: 2009-03-08 15:22+0100\n"
+"PO-Revision-Date: 2009-03-08 15:31+0100\n"
 "Last-Translator: Alexander Haß\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -63,7 +63,7 @@ msgstr "Ausgenommen"
 
 #: date_repeat/date_repeat_form.inc:169
 msgid "Dates to omit from the list of repeating dates."
-msgstr "Auszulassende Termine in der Liste der Serientermine."
+msgstr "Auszulassende Termine in der Serienterminliste."
 
 #: date_repeat/date_repeat_form.inc:258
 msgid "Delete"
