--- a/translations/date_api.de.po
+++ b/translations/date_api.de.po
@@ -19,7 +19,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2009-03-07 19:12+0100\n"
-"PO-Revision-Date: 2009-03-08 15:43+0100\n"
+"PO-Revision-Date: 2009-03-08 15:46+0100\n"
 "Last-Translator: Alexander Haß\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -33,9 +33,11 @@ msgstr ""
 msgid "remove"
 msgstr "Entfernen"
 
+# not literally
 #: date_api.admin.inc:48
+#, fuzzy
 msgid "No custom formats configured. Please <a href=\"@link\">add</a> some."
-msgstr "Keine benutzerdefinierten Formate konfiguriert. Bitte irgendeins <a href=\"@link\">hinzufügen</a>."
+msgstr "Keine benutzerdefinierten Formate konfiguriert. Ein Format <a href=\"@link\">hinzufügen</a>."
 
 #: date_api.admin.inc:64
 msgid "Format string"
@@ -45,7 +47,7 @@ msgstr "Zeichenkette formatieren"
 #: date_api.admin.inc:66
 #, fuzzy
 msgid "A user-defined date format. See the <a href=\"@url\">PHP manual</a> for available options. This format is currently set to display as <span>%date</span>."
-msgstr "Ein benutzerdefiniertes Datumsformat. Weitere Informationen zu den verfügbaren Optionen befinden sich im <a href=\"@url\">PHP manual</a>. Derzeit ist dieses Format für die Anzeige auf <span>%date</span> eingestellt."
+msgstr "Ein benutzerdefiniertes Datumsformat. Weitere Informationen zu den verfügbaren Optionen befinden sich im <a href=\"@url\">PHP-Handbuch</a>. Derzeit ist dieses Format für die Anzeige auf <span>%date</span> eingestellt."
 
 #: date_api.admin.inc:72
 msgid "Save configuration"
