--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #395156 Hide errors during multiple passes of date_format creation.
 - #395156 Update new format table definitions to be sure indexes are not too long for MYSQL to create the tables.
 - #365771 Make sure date filter doesn't try to use Date popup widget if that module is disabled.
 = #406876 Adapt Views block argument handling to adapt to arguments like user/%/calendar/2009-05.
