--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,8 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+Version 6.2.1
+=============
 - #411496 Select widget in Views was not getting forced to the right value when using 'now+' defaults.
 - #395156 Hide errors during multiple passes of date_format creation.
 - #395156 Update new format table definitions to be sure indexes are not too long for MYSQL to create the tables.
@@ -25,7 +27,7 @@ Version 6.2-dev
 - #386406 Date filter was not picking up right default value in some situations.
 
 Version 6.2.0
-=================
+=============
 - #376880 Move back/next symbols back into link.
 - Exposed filter was not testing empty values correctly.
 - Add Advanced help for new formatter settings.
