--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #414290 Update timezone form_alter to account for difference between Event version 1 and 2.
 - Broke un-exposed filters when fixing exposed filters, fixing them again.
 - Non-node date fields need better descriptions and field limits.
 
