--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #317105 Update Isreal DST rules.
 - #408770 Abort date_combo processing when user has no #access.
 - #388728 Change dash to en dash in date range theme.
 - #414290 Update timezone form_alter to account for difference between Event version 1 and 2.
