--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #447616 Allow custom tables as well as custom fields to use Date argument and filter.
 - #338253 Fixes to translation of timezone names.
 - #409476 Make sure empty UNTIL date is not parsed into RRULE.
 - Make sure $base is never empty when identifying date fields for date filter and argument.
