--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #456460 Break out simple themes for date_display_single and date_display_double for easier control by themers of separator and other html.
 - #384258 Fix broken handling of 24 hour time in Date Popup.
 - #401152 Fix broken handling of long month name in input format.
 - #452420 Revert change of hyphen to dash in date display, dash is handled badly by token and elsewhere.
