--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,32 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #494350 Add 'c' format.
+- #352975 Remove filter:mask in datepicker css and add help in settings on how to add back in theme.
+- #352975 Add hook_requirements warning to suggest using jQuery UI for datepicker.
+- #529826 Change date tools permission name to add 'administrator' to make it clear it has important powers.
+- #529826 Check for invalid content type name in Date Tools.
+- #529826 Add check_plain to label.
+- #418874 Don't run timestamp format through date_limit_format().
+- #456308 Don't reset date_api_fields cache over and over.
+- #424006 Add flexibility to date filter options by passing them directly to date_create.
+- #465870 Make sure date_repeat_form.inc is included in validation.
+- #453688 Use is_a() function so date handler will work for any handler derived from views_handler_field_date.
+- #452934 Make sure format_interval() doesn't do anything with empty dates.
+- #483682 Make searches case-insensitive.
+- #395156 Change table name for date formats from 'date_format' to 'date_formats' because 'date_format' is reserved word in some dbs.
+- #342357 Make jQuery timepicker optional.
+- #473308 Add handling for year-only date stored in timestamp field.
+- Get rid of <br> in admin summary that was going through check_plain.
+- #482436 Removed deprecated code to remove empty field values, CCK does that now.
+- #421258 Don't cache prepared node, it may need to change context or content type.
+- #421258 Make sure formatter settings context is never empty.
+- Add theme date_time_ago() to Date API so other modules can use it.
+- Remove deprecated date_format_options().
+- Remove deprecated Views code.
+- Remove deprecated date_install_clear() function.
+
+
 Version 6.2.2
 =============
 
